feat(data): split point-value history endpoints and fix device history chart